--- a/CaRenatal/ui/signup.html
+++ b/CaRenatal/ui/signup.html
@@ -38,7 +38,7 @@
 				background-repeat: no-repeat;"></div>
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
 				<img  class="img" src="../ui/assets/img/CRLogo.png" alt="" width="400" height="200">
-				<form class="login100-form validate-form">
+				<form class="login100-form validate-form" method="POST" autocomplete="off" >
 					
 					<span class="login100-form-title p-b-49">
 						Welcome To <span  style="color: rgb(248,104,21);">CARENTAL</span>
